--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2013-11-18  Eddie Stassen <estassen@gmail.com>
+
+	* Added support for Dis-Req, Dis-ACK and Dis-NAK packet types
+	
+	* Fixed all the buffer overflow issues with output buffer and large 
+	  accounting packets
+	 
+	* Updated to support flex
+	
+	* Added -S command line option to allow displaying invalid packets. 
+	  By default invalid packets will be suppressed
+	  
+	  
 2000-10-26  Paul Rhodes  <withnail@users.sourceforge.net>
 
 	* radstock.c: Actually uses the value passed on the command line
