--- a/radstock.1
+++ b/radstock.1
@@ -63,6 +63,9 @@ command line. If the file is a relative path, it is searched for using
 the \fIRADIUS_PATH\fP environment variable. If the filename is - then
 read the filter from stdin.
 
+.IP -S
+Display invalid RADIUS packets.  By default all non-RADIUS packets are suppressed
+
 .IP -p 
 Do not put the interface in promiscuous mode.
 
